--- a/less/blocks/essence.less
+++ b/less/blocks/essence.less
@@ -116,15 +116,18 @@
 
 @media @mobile-widths-only {
   .essence {
-    padding-top: 70px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 34px;
   }
 
   .essence__qote {
+    margin-top: 0;
     font-size: 17px;
-    padding: 15px;
+    padding: 13px;
   }
 
-  .qote__subtitle {
+  .essence__qote-subtitle {
     padding-top: 10px;
     padding-left: 15px;
     font-size: 11px;
@@ -138,19 +141,19 @@
     font-size: 12px;
     left: 38%;
     width: 45%;
-    bottom: 5%;
+    bottom: 7%;
   }
 
   .essence__name {
     font-size: 22px;
-    margin-top: 15px;
+    margin-top: 8px;
     margin-bottom: 20px;
     margin-left: 45%;
     &:before {
       width: 102px;
       height: 102px;
       left: -70%;
-      top: -30px;
+      top: -22px;
     }
   }
 
@@ -172,6 +175,15 @@
   .essence__buttn{
     margin: auto;
     margin-top: 15px;
+  }
+  .essence__name-description{
+    padding-top: 25px;
+  }
+  .essence__right-col-text{
+    padding-top: 15px;
+  }
+  .essence__btn{
+    margin-top: 35px;
   }
 }
 @media @tablet-widths-min and @tablet-widths-max {
