--- a/less/blocks/form.less
+++ b/less/blocks/form.less
@@ -1,3 +1,16 @@
+.modal-header{
+  & h3{
+    margin-top: 0;
+  }
+  padding-left: 50px;
+}
+.modal-body{
+  padding-top: 0!important;
+  & p{
+    padding-bottom: 20px;
+  }
+}
+
 .form {
   margin-top: 70px;
 }
