--- a/less/blocks/installation.less
+++ b/less/blocks/installation.less
@@ -68,6 +68,8 @@
     color: #fff;
     text-align: center;
     width: 80%;
+    margin: 0 auto;
+    font-style: italic;
 
     padding-bottom: 20px;
     min-height: 92px;
