--- a/less/blocks/total-earnings.less
+++ b/less/blocks/total-earnings.less
@@ -37,12 +37,13 @@
   max-width: 917px;
   margin: auto;
 }
-.total-earnings__ruble{
+
+.total-earnings__ruble {
   font-size: 89px;
 }
 
 @media @mobile-widths-only {
-  .total-earnings__numbets{
+  .total-earnings__numbets {
     font-size: 44px;
     line-height: 1;
     padding-bottom: 8px;
@@ -57,19 +58,29 @@
       background-color: @yellow-color;
     }
   }
-  .total-earnings__ruble{
+
+  .total-earnings__ruble {
     font-size: 18px;
   }
-  .total-earnings__description{
+
+  .total-earnings__description {
     font-size: 12px;
+    padding-top: 18px;
+    line-height: 1.5;
   }
+
   .total-earnings__wrapper {
-    padding-top: 30px;
+    padding-top: 27px;
     max-width: 80%;
   }
+
+  .total-earnings__numbets {
+    padding-bottom: 16px;
+  }
 }
+
 @media @tablet-widths-min and @tablet-widths-max {
-  .total-earnings__numbets{
+  .total-earnings__numbets {
     font-size: 100px;
   }
 }
