--- a/less/blocks/chains-stores.less
+++ b/less/blocks/chains-stores.less
@@ -58,18 +58,61 @@
   }
 }
 
+.chains-stores-slider__description {
+  font-size: 14px;
+  text-align: center;
+}
+
+.chains-stores-slider__year {
+  padding-top: 15px;
+  text-align: center;
+}
+
 @media @mobile-widths-only {
   .chains-stores {
     padding-top: 80px;
+    padding-bottom: 40px;
     &:before {
       top: 50px;
       height: 96%;
     }
-
   }
 
   .chains-stores__opening {
     padding-right: 0;
+  }
+
+  .chains-stores__top {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+  }
+
+  .chains-stores__opening {
+    font-size: 17px;
+  }
+
+  .chains-stores-slider {
+    & img {
+      display: block;
+      margin: auto;
+    }
+  }
+
+  .chains-stores-slider__year {
+    font-size: 24px;
+    font-weight: 300;
+  }
+  .chains-stores-slider__description{
+    padding-top: 10px;
+    width: 70%;
+    margin: auto;
+    padding-bottom: 20px;
+    font-size: 12px;
+  }
+  .chains-stores__video{
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
 
