--- a/less/blocks/header.less
+++ b/less/blocks/header.less
@@ -121,8 +121,12 @@
   background-color: #c30404;
   border-radius: 30px;
   display: block;
+  padding-bottom: 5px;
   width: 133px;
   margin-top: 10px;
+  font-size: 16px;
+  font-family: @exo;
+  vertical-align: middle;
 }
 
 .fixed {
@@ -146,19 +150,36 @@
   & .fixed-container {
     margin: auto;
   }
-  .navbar-toggler{
+  .navbar-toggler {
     &:before {
       background-color: #000;
       box-shadow: 0 6px 0 0 #000, 0 12px 0 0 #000;
     }
   }
-  .main-nav__link{
+  .main-nav__link {
     color: #0D0D0D;
     border-bottom: 1px solid rgba(0, 0, 0, .3);
   }
 }
 
 @media @mobile-widths-only {
+  .page-header {
+    padding-top: 20px;
+    border-radius: 3px;
+    width: 90%;
+    margin: auto;
+    margin-top: 20px;
+  }
+
+  .page-header__intro {
+    padding-top: 20px;
+  }
+
+  .page-header__logo {
+    padding-left: 5px;
+    width: 47%;
+  }
+
   .page-header-title {
     font-size: 23px;
   }
@@ -167,18 +188,9 @@
     display: none;
   }
 
-  .page-header {
-    padding-top: 30px;
-    border-radius: 5px;
-  }
-
-  .page-header__logo {
-    width: 80%;
-  }
-
-  .page-header {
-    width: 90%;
-    margin: auto;
+  .page-header__title-wrapper {
+    padding-top: 5px;
+    padding-bottom: 7px;
   }
 
   .page-header-title {
@@ -197,16 +209,23 @@
     font-weight: bold;
     font-style: italic;
     color: #ffffff;
+    padding-top: 12px;
   }
 
   .page-header__description {
     font-size: 13px;
     padding-top: 19px;
     font-weight: 500;
+    line-height: 1.1;
+  }
+
+  .page-header-bottom {
+    padding-top: 23px;
   }
 
   .page-header-bottom__item {
     font-size: 12px;
+    padding-bottom: 8px;
     &:nth-child(2n - 1) {
       border-left: none;
     }
@@ -214,12 +233,11 @@
 
   .page-header__action {
     display: none;
-
   }
 }
 
 @media @tablet-widths-min and @tablet-widths-max {
-  .page-header{
+  .page-header {
     padding-top: 50px;
   }
 
@@ -238,6 +256,7 @@
   .page-header__description {
     font-size: 19px;
   }
+
   .page-header__logo {
     width: 80%;
   }
