--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -1,7 +1,7 @@
 .main-nav__link {
   font-weight: bold;
   color: #fff;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid rgba(255, 255, 255, .3);
   font-size: 14px;
   padding: 0;
   font-family: Arial;
@@ -50,21 +50,23 @@
     color: #000;
   }
 }
+
 @media @mobile-widths-only {
   .navbar-toggler {
     border: none;
     padding: 0;
     box-shadow: none;
-    width: 20%;
+    width: 10%;
     &:before {
       content: "";
       position: absolute;
-      right: 14px;
-      top: 17px;
-      width: 20px;
+      right: 5px;
+      top: 5px;
+      width: 15px;
       height: 2px;
       background-color: #fff;
       box-shadow: 0 6px 0 0 #fff, 0 12px 0 0 #fff;
+      border-radius: 10px;
     }
   }
   .main-nav__link{
