--- a/less/blocks/sell.less
+++ b/less/blocks/sell.less
@@ -78,6 +78,7 @@
   height: 55px;
 }
 
+/////////////////////////////////////////////////////////////
 @media @mobile-widths-only {
   .sell {
     padding-left: 0px;
@@ -88,6 +89,8 @@
     position: relative;
     background-color: #efefef;
     border-radius: 5px;
+    margin-top: 25px;
+    padding-top: 0;
 
     & .container {
       padding-left: 15px;
@@ -103,26 +106,43 @@
         width: 90%;
         background-color: #efefef;
         border-radius: 5px;
-        box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.16);
         z-index: -1;
+        box-shadow: 0 10px 50px -20px rgba(0, 0, 0, 0.56);
       }
     }
-    .sell__right-col {
-      padding-left: 15px;
-      padding-right: 15px;
-    }
-    .sell-footer::before {
-      display: none;
-    }
-    .sell-footer__list {
-      padding-left: 15px;
-      padding-right: 15px;
-    }
-    .sell-footer-item {
-      padding-left: 5px;
-      padding-right: 5px;
-    }
+  }
 
+  .sell__title {
+    padding-top: 35px;
+  }
+
+  .sell__numder {
+    line-height: 0.9;
+    font-size: 190px;
+    margin-bottom: 14px;
+  }
+
+  .sell__numder-subtitle{
+    line-height: 1.3;
+  }
+
+  .sell__right-col {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .sell-footer::before {
+    display: none;
+  }
+
+  .sell-footer__list {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .sell-footer-item {
+    padding-left: 5px;
+    padding-right: 5px;
   }
 
   .sell-footer {
@@ -142,16 +162,9 @@
     }
   }
 
-  .sell__right-col {
-    padding-left: 60px;
-  }
-
   .sell-footer__list {
     padding-top: 0;
-  }
-
-  .sell-footer__list {
-    padding-left: 60px;
+    margin-top: 70px;
   }
 
   .sell-footer-item {
@@ -160,8 +173,15 @@
     padding-left: 0;
     padding-right: 0;
   }
+  .sell-footer__site{
+    padding-top: 18px;
+  }
+  .sell-footer-item__descriptoin{
+    padding-top: 12px;
+  }
 }
 
+////////////////////////////////////////////////////////////////////////////
 @media @tablet-widths-min {
   .sell {
     padding-top: 120px;
@@ -182,6 +202,7 @@
         background-color: #efefef;
         border-radius: 5px;
         z-index: -1;
+        box-shadow: 0 10px 50px -20px rgba(0, 0, 0, 0.56);
       }
     }
 
@@ -223,10 +244,6 @@
     padding-right: 0;
   }
 
-  .page-header__action {
-    display: none;
-  }
-
   .sell__numder-subtitle {
     text-align: center;
   }
@@ -246,6 +263,5 @@
     padding-top: 28px;
     font-family: @exo;
     font-weight: 300;
-    letter-spacing: 1px;
   }
 }
