--- a/less/global/base.less
+++ b/less/global/base.less
@@ -157,6 +157,7 @@ p {
 .mr-15 {
   margin-right: 15px;
 }
+
 //padding 20px
 .pt-20 {
   padding-top: 20px;
@@ -173,6 +174,7 @@ p {
 .pr-20 {
   padding-right: 20px;
 }
+
 //end padding 20px
 
 //padding 10px
@@ -191,12 +193,13 @@ p {
 .pr-10 {
   padding-right: 10px;
 }
+
 //end padding 10px
 
 .left-square {
   position: relative;
   padding-left: 30px;
-  &--personal{
+  &--personal {
     margin-top: 46px;
     margin-left: 5px;
   }
@@ -220,22 +223,22 @@ p {
   }
 }
 
-.login{
-  &-wrapper{
+.login {
+  &-wrapper {
     text-align: center;
   }
-  &-link{
+  &-link {
     text-align: center;
     color: #0D0D0D;
     border-bottom: 1px solid rgba(0, 0, 0, .7);
   }
 }
 
-.icon-thorns{
+.icon-thorns {
   position: relative;
   //width: 15px;
   //height: 15px;
-  &:before{
+  &:before {
     position: absolute;
     content: '';
     bottom: 0;
@@ -289,6 +292,19 @@ button {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  &:hover {
+    background-color: #FFEE6C;
+  }
+  &:active {
+    position: relative;
+    top: 2px;
+    box-shadow: 0 1px 0 0 #a87e00;
+    outline: none;
+  }
+  &:focus {
+    outline: 0;
+    outline-offset: 0;
+  }
 }
 
 .btn-white {
@@ -308,7 +324,7 @@ button {
   &:before {
     position: absolute;
     content: '';
-    left: -15px;
+    left: -20px;
     top: 13px;
     display: block;
     width: 33px;
@@ -318,7 +334,7 @@ button {
   }
   &:after {
     position: absolute;
-    left: 18px;
+    left: 15px;
     font-weight: normal;
     font-style: italic;
     content: 'Или позвоните основателю';
@@ -425,6 +441,22 @@ button {
     padding-top: 15px;
   }
 
+  .pt-sm-0 {
+    padding-top: 0;
+  }
+
+  .pb-sm-0 {
+    padding: 0;
+  }
+
+  .pl-sm-0 {
+    padding-left: 0;
+  }
+
+  .pr-sm-0 {
+    padding-right: 0;
+  }
+
   .pt-sm-30 {
     padding-top: 30px;
   }
@@ -501,6 +533,14 @@ button {
     &--big-number:before {
       width: 187px;
       left: 30px;
+      height: 4px;
+      border-radius: 10px;
+    }
+    &--header {
+      padding-bottom: 12px;
+      &:before {
+        width: 80px;
+      }
     }
   }
 
@@ -518,6 +558,8 @@ button {
     font-size: 87px;
     text-align: center;
     padding-left: 10px;
+    padding-top: 13px;
+    padding-bottom: 25px;
   }
 
   .sm-text-black {
@@ -695,7 +737,6 @@ button {
     color: #0d0d0d;
     font-size: 12px;
   }
-
 
   .left-square {
     padding-left: 25px;
