--- a/less/blocks/appeal.less
+++ b/less/blocks/appeal.less
@@ -81,6 +81,14 @@
     margin: auto;
     text-align: center;
   }
+  .appeal-arrow-down{
+    &:before{
+      left: 40%;
+    }
+    &:after{
+      left: 40%;
+    }
+  }
 }
 
 @media @tablet-widths-min and @tablet-widths-max {
