--- a/less/blocks/audience.less
+++ b/less/blocks/audience.less
@@ -44,8 +44,13 @@
 
 @media @mobile-widths-only {
   .audience {
+    margin-top: 15px;
     margin-left: 5%;
     margin-right: 5%;
+    padding-top: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
     width: 90%;
     border-radius: 5px;
     &:before {
@@ -54,6 +59,13 @@
     &:after {
       display: none;
     }
+  }
+  .audience__title{
+    font-size: 22px;
+  }
+  .audience__subtitle{
+    padding-top: 18px;
+    margin-bottom: 30px;
   }
 
 }
