--- a/less/blocks/care.less
+++ b/less/blocks/care.less
@@ -36,6 +36,8 @@
   .care {
     padding-top: 50px;
     padding-right: 0;
+    padding-left: 20px;
+    padding-right: 20px;
     & h2{
       width: 70%;
     }
@@ -48,6 +50,9 @@
   }
   .care-item{
     padding-bottom: 30px;
+  }
+  .care-list{
+    padding-top: 30px;
   }
 }
 @media @tablet-widths-min and @tablet-widths-max {
