--- a/less/blocks/get.less
+++ b/less/blocks/get.less
@@ -97,23 +97,39 @@
 }
 
 @media @mobile-widths-only {
+  .get{
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
   .get-asside {
     margin-top: 30px;
   }
 
   .get-asside__yellow {
-    padding-top: 200px;
-    &:after {
-      background-size: contain;
-      height: 290px;
-    }
+    padding-top: 245px;
     h3 {
       padding-left: 0;
       padding-right: 0;
+      font-size: 18px;
     }
     .get-asside__yellow-description {
-      padding-left: 0;
-      padding-right: 0;
+      padding-left: 15px;
+      padding-right: 15px;
+      padding-bottom: 20px;
+      &::before{
+        left: 29%;
+      }
+      &::after{
+        left: 29%;
+      }
+    }
+    &:after{
+      left: 6%;
+      right: 6%;
+      background-size: cover;
+      height: 352px;
     }
   }
 
@@ -125,6 +141,19 @@
     width: 230px;
     display: block;
     margin: auto;
+  }
+  .get__image-warehouse{
+    padding-left: 0;
+    padding-right: 0;
+    &:before{
+    bottom: 8px;
+    left: 19px;
+    }
+  }
+  .get-asside{
+    padding-left: 0;
+    padding-right: 0;
+    margin-top: 40px;
   }
 }
 
