--- a/less/blocks/marketing.less
+++ b/less/blocks/marketing.less
@@ -15,7 +15,7 @@
 }
 @media @mobile-widths-only {
   .marketing{
-    margin-top: 30px;
+    margin-top: 50px;
     padding-left: 15px;
     padding-right: 15px;
     margin-bottom: 30px;
@@ -28,6 +28,9 @@
     & img{
       display: block;
      margin: auto;
+    }
+    & p{
+      padding-top: 20px;
     }
   }
   .marketing__img-wrapper{
