--- a/less/blocks/personal.less
+++ b/less/blocks/personal.less
@@ -55,6 +55,30 @@
   margin-left: 80px;
 }
 
+@media @mobile-widths-only {
+  .personal{
+    padding-top: 50px;
+  }
+  .personal-aside__wrapper{
+    margin-top: 35px;
+    padding-left: 10px;
+    padding-right: 10px;
+    & h3{
+      font-size: 19px;
+      margin-top: 25px;
+    }
+  }
+  .personal-aside__list{
+    padding-top: 10px;
+  }
+  .personal__phone{
+    display: block;
+    width: 195px;
+    margin: auto;
+    margin-top: 20px;
+  }
+}
+
 @media @tablet-widths-min and @tablet-widths-max {
   .personal__phone {
     display: none;
