--- a/less/blocks/presentation.less
+++ b/less/blocks/presentation.less
@@ -44,12 +44,17 @@
 
 @media @mobile-widths-only {
   .presentation {
+    padding-top: 30px;
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 30px;
     &:before {
       left: 5%;
       right: 5%;
+    }
+    .container{
+      padding-left: 20px;
+      padding-right: 20px;
     }
   }
 
@@ -66,7 +71,8 @@
   .presentation__condition {
     text-align: center;
     color: #7b7b7b;
-    font-size: 15px;
+    font-size: 12px;
+    margin-left: 0;
   }
 
   .personal {
