--- a/less/blocks/slogan.less
+++ b/less/blocks/slogan.less
@@ -1,4 +1,4 @@
-.slogan{
+.slogan {
   text-align: center;
   margin-top: 112px;
   font-size: 80px;
@@ -8,14 +8,23 @@
   text-transform: uppercase;
   font-family: 'Panton', sans-serif;
 }
-.form-btn{
+
+.form-btn {
   margin: auto;
   display: block;
   margin-top: 15px;
 }
 
+@media @mobile-widths-only {
+  .slogan {
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: 39px;
+  }
+}
+
 @media @tablet-widths-max {
-  .slogan{
+  .slogan {
     margin-top: 50px;
     font-weight: normal;
     margin-bottom: 50px;
