--- a/less/global/base.less
+++ b/less/global/base.less
@@ -402,6 +402,7 @@ button {
   }
 }
 
+///////////////////////////////////////////////////////////////////////////////////////////////////////
 @media @mobile-widths-only {
   h2 {
     font-family: @exo;
@@ -455,6 +456,38 @@ button {
 
   .pr-sm-0 {
     padding-right: 0;
+  }
+
+  .pt-sm-10 {
+    padding-top: 10px
+  }
+
+  .pb-sm-10 {
+    padding-bottom: 10px;
+  }
+
+  .pl-sm-10 {
+    padding-left: 10px;
+  }
+
+  .pr-sm-10 {
+    padding-right: 10px;
+  }
+
+  .pt-sm-25 {
+    padding-top: 25px;
+  }
+
+  .pb-sm-25 {
+    padding-bottom: 25px;
+  }
+
+  .pl-sm-25 {
+    padding-left: 25px;
+  }
+
+  .pr-sm-25 {
+    padding-right: 25px;
   }
 
   .pt-sm-30 {
@@ -579,7 +612,10 @@ button {
       left: 0px;
       width: 14px;
       height: 14px;
-
+    }
+    &--personal{
+      margin-top: 31px;
+      margin-bottom: 0;
     }
   }
 }
@@ -748,5 +784,4 @@ button {
 
     }
   }
-
 }
