--- a/css/style.css
+++ b/css/style.css
@@ -1648,8 +1648,10 @@ button:focus {
   top: 10px;
 }
 .technologies {
-  margin-top: 85px;
+  margin-top: 50px;
   padding-bottom: 65px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 .technologies h3 {
   margin-top: 35px;
@@ -2814,6 +2816,30 @@ button:focus {
   .pr-sm-0 {
     padding-right: 0;
   }
+  .pt-sm-10 {
+    padding-top: 10px;
+  }
+  .pb-sm-10 {
+    padding-bottom: 10px;
+  }
+  .pl-sm-10 {
+    padding-left: 10px;
+  }
+  .pr-sm-10 {
+    padding-right: 10px;
+  }
+  .pt-sm-25 {
+    padding-top: 25px;
+  }
+  .pb-sm-25 {
+    padding-bottom: 25px;
+  }
+  .pl-sm-25 {
+    padding-left: 25px;
+  }
+  .pr-sm-25 {
+    padding-right: 25px;
+  }
   .pt-sm-30 {
     padding-top: 30px;
   }
@@ -2916,6 +2942,10 @@ button:focus {
     left: 0px;
     width: 14px;
     height: 14px;
+  }
+  .left-square--personal {
+    margin-top: 31px;
+    margin-bottom: 0;
   }
   .page-header {
     padding-top: 20px;
@@ -3277,6 +3307,8 @@ button:focus {
   .care {
     padding-top: 50px;
     padding-right: 0;
+    padding-left: 20px;
+    padding-right: 20px;
   }
   .care h2 {
     width: 70%;
@@ -3290,32 +3322,56 @@ button:focus {
   .care-item {
     padding-bottom: 30px;
   }
+  .care-list {
+    padding-top: 30px;
+  }
+  .proposal {
+    margin-top: 0;
+    padding-top: 50px;
+    padding-bottom: 45px;
+  }
   .proposal h2 {
     font-size: 34px;
     line-height: 1;
   }
   .proposal p {
-    padding-top: 50px;
+    padding-top: 45px;
     font-size: 20px;
     width: 90%;
+  }
+  .get {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
   .get-asside {
     margin-top: 30px;
   }
   .get-asside__yellow {
-    padding-top: 200px;
-  }
-  .get-asside__yellow:after {
-    background-size: contain;
-    height: 290px;
+    padding-top: 245px;
   }
   .get-asside__yellow h3 {
     padding-left: 0;
     padding-right: 0;
+    font-size: 18px;
   }
   .get-asside__yellow .get-asside__yellow-description {
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 20px;
+  }
+  .get-asside__yellow .get-asside__yellow-description::before {
+    left: 29%;
+  }
+  .get-asside__yellow .get-asside__yellow-description::after {
+    left: 29%;
+  }
+  .get-asside__yellow:after {
+    left: 6%;
+    right: 6%;
+    background-size: cover;
+    height: 352px;
   }
   .get__button {
     margin-left: 0;
@@ -3326,8 +3382,22 @@ button:focus {
     display: block;
     margin: auto;
   }
+  .get__image-warehouse {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .get__image-warehouse:before {
+    bottom: 8px;
+    left: 19px;
+  }
+  .get-asside {
+    padding-left: 0;
+    padding-right: 0;
+    margin-top: 40px;
+  }
   .installation {
     padding-top: 30px;
+    padding-bottom: 50px;
   }
   .installation:before {
     left: 5%;
@@ -3340,6 +3410,7 @@ button:focus {
   .installation-top__left-col {
     padding-right: 38px;
     padding-left: 38px;
+    padding-bottom: 0px;
   }
   .installation-top__left-col:before {
     display: none;
@@ -3352,8 +3423,13 @@ button:focus {
     color: #fff;
     font-size: 19px;
     text-align: center;
+    padding-left: 0;
+    margin-top: 5px;
+    padding-top: 0;
   }
   .installation-top__left-col p {
+    margin-top: 18px;
+    padding-left: 0;
     color: #fff;
     text-align: center;
   }
@@ -3362,12 +3438,15 @@ button:focus {
     padding-left: 35px;
   }
   .installation-top__right-col h3 {
+    margin-top: 20px;
     text-align: center;
     font-size: 29px;
+    padding-bottom: 15px;
   }
   .installation-bottom {
     padding-left: 20px;
     padding-right: 20px;
+    padding-bottom: 5px;
   }
   .installation-bottom h4 {
     margin-left: 15px;
@@ -3376,17 +3455,43 @@ button:focus {
     padding-bottom: 20px;
     margin-bottom: 0;
   }
+  .installation-bottom h4:before {
+    display: none;
+  }
   .installation__list {
-    padding-bottom: 10px;
-    margin-left: 20px;
+    margin-left: 2px;
     margin-right: 20px;
     margin-bottom: 15px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    padding-top: 0;
+    padding-bottom: 16px;
+  }
+  .installation__item {
+    font-size: 15px;
+    font-weight: 400;
   }
   .installation__btn {
     margin: 0;
   }
+  .technologies {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .technologies-aside__subtitle {
+    margin-left: -20px;
+    margin-right: -20px;
+    padding-left: 35px;
+    margin-top: 20px;
+    margin-bottom: 35px;
+  }
+  .technologies__screen-link-description {
+    padding-left: 0;
+  }
+  .technologies__bottom {
+    padding-top: 15px;
+  }
   .presentation {
+    padding-top: 30px;
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 30px;
@@ -3394,6 +3499,10 @@ button:focus {
   .presentation:before {
     left: 5%;
     right: 5%;
+  }
+  .presentation .container {
+    padding-left: 20px;
+    padding-right: 20px;
   }
   .presentation__list {
     padding-top: 15px;
@@ -3406,7 +3515,8 @@ button:focus {
   .presentation__condition {
     text-align: center;
     color: #7b7b7b;
-    font-size: 15px;
+    font-size: 12px;
+    margin-left: 0;
   }
   .personal {
     padding-left: 15px;
@@ -3439,10 +3549,32 @@ button:focus {
     display: block;
     margin: auto;
   }
+  .personal {
+    padding-top: 50px;
+  }
+  .personal-aside__wrapper {
+    margin-top: 35px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .personal-aside__wrapper h3 {
+    font-size: 19px;
+    margin-top: 25px;
+  }
+  .personal-aside__list {
+    padding-top: 10px;
+  }
+  .personal__phone {
+    display: block;
+    width: 195px;
+    margin: auto;
+    margin-top: 20px;
+  }
   .data-base {
     padding-left: 10px;
     padding-right: 10px;
     padding-bottom: 0;
+    padding-top: 23px;
   }
   .data-base__number {
     font-size: 70px;
@@ -3457,9 +3589,18 @@ button:focus {
   .data-base__item:nth-child(2n-1) {
     padding-right: 5px;
   }
+  .data-base__description {
+    padding-top: 18px;
+    margin-bottom: 15px;
+  }
   .audience {
+    margin-top: 15px;
     margin-left: 5%;
     margin-right: 5%;
+    padding-top: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
     width: 90%;
     border-radius: 5px;
   }
@@ -3469,8 +3610,15 @@ button:focus {
   .audience:after {
     display: none;
   }
+  .audience__title {
+    font-size: 22px;
+  }
+  .audience__subtitle {
+    padding-top: 18px;
+    margin-bottom: 30px;
+  }
   .marketing {
-    margin-top: 30px;
+    margin-top: 50px;
     padding-left: 15px;
     padding-right: 15px;
     margin-bottom: 30px;
@@ -3485,6 +3633,9 @@ button:focus {
     display: block;
     margin: auto;
   }
+  .marketing p {
+    padding-top: 20px;
+  }
   .marketing__img-wrapper {
     margin-top: 15px;
   }
@@ -3495,34 +3646,40 @@ button:focus {
     padding-bottom: 0;
   }
   .plan__top-wrapper {
+    margin-top: 15px;
     width: 90%;
     margin-left: 5%;
     margin-right: 5%;
-    padding-top: 15px;
+    padding-top: 14px;
     margin-bottom: 10px;
+    padding-bottom: 20px;
   }
   .plan__suptittle {
     font-size: 9px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
   }
   .plan__title {
     font-size: 28px;
+    font-weight: 900;
   }
   .plan__subtitle {
     margin-top: 5px;
-    padding-top: 11px;
+    padding-top: 5px;
     font-size: 9px;
     text-align: center;
     font-weight: 900;
     margin-bottom: 0;
   }
+  .plan__bottom-img {
+    margin-top: 4px;
+  }
   .promotion {
     padding-left: 15px;
     padding-right: 15px;
-    margin-top: 80px;
+    margin-top: 105px;
   }
   .promotion h4 {
-    margin-top: 15px;
+    margin-top: 20px;
     font-size: 14px;
   }
   .promotion p {
@@ -3540,6 +3697,10 @@ button:focus {
     padding-left: 15px;
     padding-right: 15px;
   }
+  .control img {
+    display: block;
+    margin: auto;
+  }
   .profit {
     padding-left: 15px;
     padding-right: 15px;
@@ -3547,6 +3708,7 @@ button:focus {
   }
   .profit__list {
     padding-left: 25px;
+    padding-top: 9px;
   }
   .profit__item {
     font-size: 12px;
@@ -3570,9 +3732,16 @@ button:focus {
     margin: auto;
     text-align: center;
   }
+  .appeal-arrow-down:before {
+    left: 40%;
+  }
+  .appeal-arrow-down:after {
+    left: 40%;
+  }
   .form {
     margin-left: 15px;
     margin-right: 15px;
+    margin-top: 35px;
   }
   .form-control {
     padding: 10px 30px;
@@ -3582,14 +3751,44 @@ button:focus {
     padding-right: 0;
   }
   .form__description {
+    margin-left: 0;
+    margin-top: 0;
+    padding-top: 25px;
+  }
+  .form-group {
+    margin-bottom: 22px;
+  }
+  .form__city {
+    margin-bottom: 5px;
+  }
+  .slogan {
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: 39px;
+  }
+  .page-footer {
+    padding-top: 35px;
+    padding-bottom: 40px;
+  }
+  .page-footer__copyright {
+    font-size: 12px;
+    text-align: center;
+  }
+  .page-footer__privacy {
+    font-size: 12px;
+    text-align: center;
+    margin-top: 10px;
+  }
+  .page-footer__development {
+    font-size: 12px;
+    text-align: center;
+    padding-left: 0;
     margin-top: 20px;
   }
 }
 @media (max-width: 1150px) {
   .technologies {
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-bottom: 50px;
+    padding-bottom: 35px;
   }
   .technologies-aside__title {
     font-size: 18px;
