--- a/less/blocks/control.less
+++ b/less/blocks/control.less
@@ -9,6 +9,10 @@
     margin-top: 20px;
     padding-left: 15px;
     padding-right: 15px;
+    & img{
+      display: block;
+      margin: auto;
+    }
   }
 }
 
