--- a/less/blocks/data-base.less
+++ b/less/blocks/data-base.less
@@ -37,6 +37,7 @@
     padding-left: 10px;
     padding-right: 10px;
     padding-bottom: 0;
+    padding-top: 23px;
   }
 
   .data-base__number {
@@ -55,6 +56,10 @@
     &:nth-child(2n-1) {
       padding-right: 5px;
     }
+  }
+  .data-base__description{
+    padding-top: 18px;
+    margin-bottom: 15px;
   }
 }
 
