--- a/less/blocks/form.less
+++ b/less/blocks/form.less
@@ -45,6 +45,7 @@
   .form {
     margin-left: 15px;
     margin-right: 15px;
+    margin-top: 35px;
   }
 
   .form-control {
@@ -57,7 +58,15 @@
   }
 
   .form__description {
-    margin-top: 20px;
+    margin-left: 0;
+    margin-top: 0;
+    padding-top: 25px;
+  }
+  .form-group{
+    margin-bottom: 22px;
+  }
+  .form__city{
+    margin-bottom: 5px;
   }
 }
 
