--- a/less/blocks/installation.less
+++ b/less/blocks/installation.less
@@ -105,6 +105,7 @@
 @media @mobile-widths-only {
   .installation {
     padding-top: 30px;
+    padding-bottom: 50px;
     &:before {
       left: 5%;
       right: 5%;
@@ -119,6 +120,7 @@
   .installation-top__left-col {
     padding-right: 38px;
     padding-left: 38px;
+    padding-bottom: 0px;
     &:before {
       display: none;
     }
@@ -130,8 +132,13 @@
       color: #fff;
       font-size: 19px;
       text-align: center;
+      padding-left: 0;
+      margin-top: 5px;
+      padding-top: 0;
     }
     & p {
+      margin-top: 18px;
+      padding-left: 0;
       color: #fff;
       text-align: center;
     }
@@ -141,29 +148,40 @@
     padding-right: 35px;
     padding-left: 35px;
     & h3 {
+      margin-top: 20px;
       text-align: center;
       font-size: 29px;
+      padding-bottom: 15px;
     }
   }
 
   .installation-bottom {
     padding-left: 20px;
     padding-right: 20px;
+    padding-bottom: 5px;
     & h4 {
       margin-left: 15px;
       margin-right: 15px;
       text-align: center;
       padding-bottom: 20px;
       margin-bottom: 0;
+      &:before{
+        display: none;
+      }
     }
   }
 
   .installation__list {
-    padding-bottom: 10px;
-    margin-left: 20px;
+    margin-left: 2px;
     margin-right: 20px;
     margin-bottom: 15px;
     border-bottom: 1px solid rgba(255, 255, 255, .3);
+    padding-top: 0;
+    padding-bottom: 16px;
+  }
+  .installation__item{
+    font-size: 15px;
+    font-weight: 400;
   }
 
   .installation__btn {
