--- a/less/blocks/plan.less
+++ b/less/blocks/plan.less
@@ -71,29 +71,35 @@
   }
 
   .plan__top-wrapper {
+    margin-top: 15px;
     width: 90%;
     margin-left: 5%;
     margin-right: 5%;
-    padding-top: 15px;
+    padding-top: 14px;
     margin-bottom: 10px;
+    padding-bottom: 20px;
   }
 
   .plan__suptittle {
     font-size: 9px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
   }
 
   .plan__title {
-    font-size: 28px
+    font-size: 28px;
+    font-weight: 900;
   }
 
   .plan__subtitle {
     margin-top: 5px;
-    padding-top: 11px;
+    padding-top: 5px;
     font-size: 9px;
     text-align: center;
     font-weight: 900;
     margin-bottom: 0;
+  }
+  .plan__bottom-img {
+    margin-top: 4px;
   }
 }
 @media @tablet-widths-min and @tablet-widths-max {
