--- a/less/blocks/proposal.less
+++ b/less/blocks/proposal.less
@@ -25,12 +25,15 @@
 
 @media @mobile-widths-only {
   .proposal {
+    margin-top: 0;
+    padding-top: 50px;
+    padding-bottom: 45px;
     & h2 {
       font-size: 34px;
       line-height: 1;
     }
     & p{
-      padding-top: 50px;
+      padding-top: 45px;
       font-size: 20px;
       width: 90%;
     }
