--- a/less/blocks/technologies.less
+++ b/less/blocks/technologies.less
@@ -1,6 +1,8 @@
 .technologies {
-  margin-top: 85px;
+  margin-top: 50px;
   padding-bottom: 65px;
+  padding-left: 20px;
+  padding-right: 20px;
   & h3 {
     margin-top: 35px;
   }
@@ -90,11 +92,30 @@
   text-align: left;
 }
 
+@media @mobile-widths-only {
+  .technologies {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .technologies-aside__subtitle{
+    margin-left: -20px;
+    margin-right: -20px;
+    padding-left: 35px;
+    margin-top: 20px;
+    margin-bottom: 35px;
+  }
+  .technologies__screen-link-description{
+    padding-left: 0;
+  }
+  .technologies__bottom{
+    padding-top: 15px;
+  }
+}
+
+
 @media @tablet-widths-max {
   .technologies {
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-bottom: 50px;
+    padding-bottom: 35px;
   }
 
   .technologies-aside__title {
