--- a/css/style.css
+++ b/css/style.css
@@ -563,6 +563,14 @@ p {
   padding-top: 15px;
   margin-bottom: 0;
 }
+.fluid-gallery {
+  max-width: 1920px;
+  margin: auto;
+}
+.mfp-arrow:active {
+  position: absolute;
+  top: 50%;
+}
 .pt-30 {
   padding-top: 30px;
 }
