--- a/less/global/base.less
+++ b/less/global/base.less
@@ -94,6 +94,22 @@ p {
   margin-bottom: 0;
 }
 
+.fluid-gallery{
+  max-width: 1920px;
+  margin: auto;
+}
+
+.mfp-arrow{
+  &:active{
+    position: absolute;
+    top: 50%;
+  }
+}
+
+.mfp-close{
+
+}
+
 .pt-30 {
   padding-top: 30px;
 }
