--- a/css/style.css
+++ b/css/style.css
@@ -743,6 +743,12 @@ button:focus {
   outline: 0;
   outline-offset: 0;
 }
+button:disabled {
+  transition: .3s;
+  box-shadow: none;
+  background-color: #CCCCCC;
+  color: #8c8c8c;
+}
 .btn-white {
   background-color: #fff;
   box-shadow: none;
@@ -831,6 +837,51 @@ button:focus {
   top: 1px;
   background-color: #0D0D0D;
   transition: transform 250ms ease;
+}
+.anim {
+  transition: 0.5s ease-out;
+}
+.anim.out {
+  opacity: 0;
+}
+.anim.in {
+  opacity: 1;
+}
+.anim-v-slide.in {
+  transform: translateY(0);
+}
+.anim-v-slide.out {
+  transform: translateY(80px);
+}
+.anim-v-slide.out_top {
+  transform: translateY(-80px);
+}
+.td-1 {
+  transition-delay: 0.1s;
+}
+.td-2 {
+  transition-delay: 0.2s;
+}
+.td-3 {
+  transition-delay: 0.3s;
+}
+.td-4 {
+  transition-delay: 0.4s;
+}
+.td-5 {
+  transition-delay: 0.5s;
+}
+.td-6 {
+  transition-delay: 0.6s;
+}
+.td-7 {
+  transition-delay: 0.7s;
+}
+.td-8 {
+  transition-delay: 0.8s;
+}
+.td-9 {
+  transition-delay: 0.9s;
 }
 .page-header {
   background: url("/img/header-bg.jpg");
@@ -2027,6 +2078,7 @@ button:focus {
   text-align: center;
   border-radius: 5px;
   position: relative;
+  background-position-y: 40%;
 }
 .appeal-bottom-bg {
   position: absolute;
