--- a/less/style.less
+++ b/less/style.less
@@ -2,6 +2,7 @@
 @import "normalize.less";
 @import "variables.less";
 @import "global/base.less";
+@import "global/animation.less";
 @import "blocks/header.less";
 @import "blocks/main-nav.less";
 @import "blocks/experience.less";
