--- a/css/style.css
+++ b/css/style.css
@@ -1744,6 +1744,7 @@ button:disabled {
   font-style: italic;
   line-height: 1.5;
   text-align: left;
+  display: none;
 }
 .technologies__screen-link {
   display: -ms-flexbox;
