--- a/less/blocks/plan.less
+++ b/less/blocks/plan.less
@@ -65,6 +65,13 @@
   position: relative;
 }
 
+.plan__link {
+  margin-top: 22px;
+  display: inline-block;
+  border-bottom: 1px solid #C7C7C7;
+  color: #0D0D0D;
+}
+
 @media @mobile-widths-only {
   .plan {
     padding-bottom: 0;
@@ -100,6 +107,11 @@
   }
   .plan__bottom-img {
     margin-top: 4px;
+  }
+  .plan__link{
+    font-size: 14px;
+    margin-top: 10px;
+    margin-left: 25px;
   }
 }
 @media @tablet-widths-min and @tablet-widths-max {
