--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -70,3 +70,14 @@
     background-size: cover;
   }
 }
+
+@media @mobile-widths-only {
+  .contacts__phone{
+    font-size: 18px;
+    width: 100%;
+  }
+  .contacts__name{
+    font-size: 18px;
+    width: 100%;
+  }
+}
