--- a/less/global/base.less
+++ b/less/global/base.less
@@ -252,12 +252,12 @@ p {
 
 .icon-thorns {
   position: relative;
-  //width: 15px;
-  //height: 15px;
+  width: 36px;
+  display: inline-block;
   &:before {
     position: absolute;
     content: '';
-    bottom: 0;
+    bottom: -2px;
     left: 0;
     display: block;
     width: 36px;
