--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -18,3 +18,32 @@
   margin-top: 30px;
   width: 100%;
 }
+.video__youtube{
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+  transition: all 200ms ease-out;
+  cursor: pointer;
+  background-image: url("/img/video-bg.jpg");
+  & .play{
+    background: url('/img/icons/youtube-play-btn.png') no-repeat; /*ВАЖНО: здесь укажите адрес до изображения*/
+    background-position: 0 -50px;
+    -webkit-background-size: 100% auto;
+    position: absolute;
+    height: 50px;
+    width: 69px;
+    transition: none;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    margin:auto;
+    background-size: cover;
+  }
+}
+
+.video__youtube:hover .play {
+  background-position: 0 0;
+}
