--- a/less/blocks/appeal.less
+++ b/less/blocks/appeal.less
@@ -1,7 +1,7 @@
 .appeal {
   padding-top: 35px;
   padding-bottom: 80px;
-  background: url("/img/appeal/appeal-bg.jpg");
+  background: url("../img/appeal/appeal-bg.jpg");
   width: 94%;
   margin-left: 3%;
   margin-right: 3%;
