--- a/less/blocks/audience.less
+++ b/less/blocks/audience.less
@@ -23,7 +23,7 @@
     content: '';
     bottom: -177px;
     right: 460px;
-    background-image: url("/img/icons/bottom-row.svg");
+    background-image: url("../img/icons/bottom-row.svg");
     background-size: cover;
     width: 140px;
     height: 130px;
