--- a/less/blocks/chains-stores.less
+++ b/less/blocks/chains-stores.less
@@ -52,7 +52,7 @@
     top: -17px;
     right: 195px;
     width: 80px;
-    background-image: url("/img/icons/youtube.svg");
+    background-image: url("../img/icons/youtube.svg");
     background-size: cover;
     height: 68px;
   }
