--- a/less/blocks/get.less
+++ b/less/blocks/get.less
@@ -33,7 +33,7 @@
     position: absolute;
     top: -125px;
     content: '';
-    background-image: url(/img/get-conrt.jpg);
+    background-image: url(../img/get-conrt.jpg);
     height: 392px;
     left: 11%;
     right: 11%;
