--- a/less/blocks/personal.less
+++ b/less/blocks/personal.less
@@ -37,7 +37,7 @@
     left: 0;
     letter-spacing: normal;
     text-align: left;
-    background: url("/img/icons/question-button.svg");
+    background: url("../img/icons/question-button.svg");
     background-size: cover;
   }
 }
