--- a/less/blocks/plan.less
+++ b/less/blocks/plan.less
@@ -21,7 +21,7 @@
     bottom: -245px;
     left: 0;
     display: block;
-    background-image: url("/img/icons/yellow-borrom-bg.png");
+    background-image: url("../img/icons/yellow-borrom-bg.png");
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: 0px 0px;
