--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -26,9 +26,9 @@
   overflow: hidden;
   transition: all 200ms ease-out;
   cursor: pointer;
-  background-image: url("/img/video-bg.jpg");
+  background-image: url("../img/video-bg.jpg");
   & .play{
-    background: url('/img/icons/youtube-play-btn.png') no-repeat; /*ВАЖНО: здесь укажите адрес до изображения*/
+    background: url('../img/icons/youtube-play-btn.png') no-repeat; /*ВАЖНО: здесь укажите адрес до изображения*/
     background-position: 0 -50px;
     -webkit-background-size: 100% auto;
     position: absolute;
