--- a/less/global/base.less
+++ b/less/global/base.less
@@ -262,7 +262,7 @@ p {
     display: block;
     width: 36px;
     height: 29px;
-    background-image: url("/img/icons/thorns.svg");
+    background-image: url("../img/icons/thorns.svg");
     background-size: cover;
   }
 }
@@ -351,7 +351,7 @@ button {
     display: block;
     width: 33px;
     height: 35px;
-    background-image: url("/img/icons/mobile.svg");
+    background-image: url("../img/icons/mobile.svg");
     background-size: cover;
   }
   &:after {
@@ -367,7 +367,7 @@ button {
   &--black {
     color: #000;
     &:before {
-      background-image: url("/img/icons/mobile-black.svg");
+      background-image: url("../img/icons/mobile-black.svg");
       top: 5px;
     }
   }
