--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -48,7 +48,7 @@
     height: 25px;
     left: 0;
     top: 0;
-    background-image: url("/img/icons/vk-yellow.svg");
+    background-image: url("../img/icons/vk-yellow.svg");
     background-size: cover;
   }
 }
@@ -66,7 +66,7 @@
     height: 25px;
     left: 0;
     top: 0;
-    background-image: url("/img/icons/insta.svg");
+    background-image: url("../img/icons/insta.svg");
     background-size: cover;
   }
 }
