--- a/less/blocks/essence.less
+++ b/less/blocks/essence.less
@@ -58,7 +58,7 @@
     height: 128px;
     border-radius: 100px;
     border: 5px solid #fff;
-    background-image: url(/img/igor.jpg);
+    background-image: url(../img/igor.jpg);
     content: '';
     left: -140px;
     top: -25px;
