--- a/less/blocks/header.less
+++ b/less/blocks/header.less
@@ -1,5 +1,5 @@
 .page-header {
-  background: url("/img/header-bg.jpg");
+  background: url("../img/header-bg.jpg");
   padding-top: 71px;
   margin-left: 3%;
   margin-right: 3%;
