--- a/less/blocks/installation.less
+++ b/less/blocks/installation.less
@@ -3,7 +3,7 @@
   padding-bottom: 80px;
   position: relative;
   &:before {
-    background: url("/img/installation-block/installation-bg.jpg");
+    background: url(".../img/installation-block/installation-bg.jpg");
     position: absolute;
     width: 94%;
     top: 0px;
@@ -46,7 +46,7 @@
     bottom: 0;
     height: 100%;
     width: 40px;
-    background-image: url("/img/right-triangle.png");
+    background-image: url(".../img/right-triangle.png");
     background-size: cover;
   }
   h3 {
