--- a/less/blocks/presentation.less
+++ b/less/blocks/presentation.less
@@ -31,7 +31,7 @@
     height: 25px;
     left: 50%;
     top: 50%;
-    background: url("/img/icons/lock.svg");
+    background: url("../img/icons/lock.svg");
     transform: translate(-50%, -50%);
     background-size: cover;
   }
