--- a/css/style.css
+++ b/css/style.css
@@ -1666,7 +1666,7 @@ button:disabled {
   position: relative;
 }
 .installation:before {
-  background: url(".../img/installation-block/installation-bg.jpg");
+  background: url("../img/installation-block/installation-bg.jpg");
   position: absolute;
   width: 94%;
   top: 0px;
@@ -1707,7 +1707,7 @@ button:disabled {
   bottom: 0;
   height: 100%;
   width: 40px;
-  background-image: url(".../img/right-triangle.png");
+  background-image: url("../img/right-triangle.png");
   background-size: cover;
 }
 .installation-top__left-col h3 {
